--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -30,6 +30,7 @@ experience:
   -
 - tags: story_time just_kidding
   title: Lead DevSecOops Engineer
+  location: IN DEN WOLKEN!
   description:
   - Kubering all of the netes. YAML YAML YAML YAML  YAML YAML. Did you catch that
     extra space? I did. I see all spaces. Things are constantly in Flux around here,
