--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -27,7 +27,9 @@ experience:
   starting_compensation: uDg9+T5Y5l8y0Ou+qdX1lA==
   ending_compensation:
   description:
-  -
+  - Migrating workloads from Rancher to EKS
+  - Making ChatGPT write Python for me.
+  - Prompt engineering? LOL
 - tags: story_time just_kidding
   title: Lead DevSecOops Engineer
   location: IN DEN WOLKEN!
