Updating salary for Platform Science

--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -25,7 +25,7 @@ experience:
   start_date: 2023-04-24
   end_date:
   starting_compensation: uDg9+T5Y5l8y0Ou+qdX1lA==
-  ending_compensation:
+  ending_compensation: SiMywDfVYpayZhpuDUQa5g==
   description:
   - Migrating workloads from Rancher to EKS
   - Making ChatGPT write Python for me.
