--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -20,16 +20,52 @@ experience:
   state: California
   zip_code: '92121'
   phone:
-  url: https://www.platformscience.com/
-  supervisor: Michael Romero
+  url: https://platformscience.com/
+  supervisor: Michael McCann
   start_date: 2023-04-24
   end_date:
   starting_compensation: uDg9+T5Y5l8y0Ou+qdX1lA==
   ending_compensation: SiMywDfVYpayZhpuDUQa5g==
   description:
-  - Migrating workloads from Rancher to EKS
-  - Making ChatGPT write Python for me.
-  - Prompt engineering? LOL
+  - Wrote Architectural Decision Records (ADRs) regarding database standards and deployment,
+    and contributed to ADRs on Helm standards and resource tagging.
+  - Authored Terraform modules for deploying AWS RDS databases according to our standards.
+  - Upgraded AWS RDS databases from MySQL 5.7 to 8.0, Aiven Timescale (PostgreSQL)
+    databases from 11 to 12, and deployed databases for several new applications.
+  - Translated Rancher to Helm with some advanced yq scripting, then migrated applications
+    for dozens of nationwide trucking fleets to our new AWS EKS clusters.
+  - Created a runbook for on-call engineers with various commands for troubleshooting
+    Kubernetes, and onboarded several engineers to the wonderful world of container
+    orchestration!
+  - Implemented AWS VPC CNI to increase the pods per node for our Kubernetes clusters,
+    which allowed us to significantly scale down the number of nodes, and saved the
+    company some ungodly amount of money!
+  - Started to level up my Prompt Engineering skills, and made ChatGPT write some
+    Python scripts for me.
+- tags: current story_time
+  title: Volunteer
+  location: Remote
+  company: Equal Vote Coalition
+  address: 544 Blair Blvd
+  city: Eugene
+  state: Oregon
+  zip_code: '97402'
+  phone: 971-222-9364
+  url: https://equal.vote/
+  supervisor: Mike Franze
+  start_date: 2016-11-01
+  end_date:
+  starting_compensation:
+  ending_compensation:
+  description:
+  - Designed and built the Azure Kubernetes infrastructure for the soon-to-be-released
+    [STAR Voting](https://starvoting.org/) 2.0 web app.
+  - Deployed PostgreSQL databases and Keycloak for the web app.
+  - Created GitHub Actions pipelines for web app and terraform repositories.
+  - Supported the [Voting-Theory Forum](https://votingtheory.org/) running on a Linux
+    VPS in Linode.
+  - Attended rallies, meetings, and other events to try to spread the word about STAR
+    voting!
 - tags: story_time just_kidding
   title: Lead DevSecOops Engineer
   location: IN DEN WOLKEN!
@@ -60,7 +96,7 @@ experience:
   state: New York
   zip_code: '11206'
   phone: "+1 646-598-6376"
-  url: https://www.consensys.net/
+  url: https://consensys.net/
   supervisor: Griffin Anderson, Patrick Berarducci, Lex Sokolin, Didier Le Floch,
     Bogdan Suvar
   start_date: 2018-04-18
@@ -112,7 +148,7 @@ experience:
   state: Oregon
   zip_code: '97204'
   phone: "+1 503-224-6010"
-  url: https://www.iovation.com/
+  url: https://iovation.com/
   supervisor: Aaron Blew
   start_date: '2017-11-13'
   end_date: '2018-03-09'
@@ -138,7 +174,7 @@ experience:
   state: Massachusetts
   zip_code: '02472'
   phone: "+1 800-981-5084"
-  url: http://www.athenahealth.com/
+  url: http://athenahealth.com/
   supervisor: Cameron King
   start_date: '2015-08-31'
   end_date: '2017-11-06'
@@ -191,7 +227,7 @@ experience:
   state: Texas
   zip_code: '78731'
   phone:
-  url: http://www.indeed.com/
+  url: http://indeed.com/
   supervisor: Jason Koppe
   start_date: '2013-11-25'
   end_date: '2015-05-21'
@@ -241,7 +277,7 @@ experience:
   state: Texas
   zip_code: '78727'
   phone: "+1 512-372-8397"
-  url: http://www.schwab.com/
+  url: http://schwab.com/
   supervisor: Irby Gaudet
   start_date: '2010-03-15'
   end_date: '2013-04-02'
@@ -272,7 +308,7 @@ experience:
   state: Texas
   zip_code: '78759'
   phone: "+1 888-811-3789"
-  url: http://www.renewdata.com/
+  url: http://renewdata.com/
   supervisor: Tony Colon
   start_date: '2009-10-15'
   end_date: '2010-03-11'
@@ -299,7 +335,7 @@ experience:
   state: Texas
   zip_code: '78758'
   phone: "+1 512-220-7414"
-  url: http://www.engauge.com/
+  url: http://engauge.com/
   supervisor: Bob Elmer
   start_date: '2007-11-01'
   end_date: '2009-09-15'
@@ -341,7 +377,7 @@ experience:
   state: Texas
   zip_code: '78746'
   phone: "+1 512-330-9130"
-  url: http://www.winternals.com/
+  url: http://winternals.com/
   supervisor: Matthew Bryce
   start_date: '2004-01-30'
   end_date: '2007-03-30'
@@ -401,7 +437,7 @@ experience:
   state: Texas
   zip_code: '78682'
   phone: "+1 512-723-9134"
-  url: http://www.dell.com/
+  url: http://dell.com/
   supervisor: Tony Bass
   start_date: '2002-07-15'
   end_date: '2003-07-17'
@@ -423,7 +459,7 @@ experience:
   state: Texas
   zip_code: '77802'
   phone: "+1 979-774-2700"
-  url: http://www.decisionone.com/
+  url: http://decisionone.com/
   supervisor: Noel Templeton
   start_date: '2001-10-08'
   end_date: '2002-03-08'
@@ -465,7 +501,7 @@ experience:
   state: Wisconsin
   zip_code: '53718'
   phone: "+1 608-241-5100"
-  url: http://www.exactacorp.com/
+  url: http://exactacorp.com/
   supervisor: Hank
   start_date: '2000-01-16'
   end_date: '2001-03-31'
@@ -491,7 +527,7 @@ experience:
   state: Texas
   zip_code: '78205'
   phone: "+1 210-357-9200"
-  url: http://www.texas.net/
+  url: http://texas.net/
   supervisor: Tim Yaeger
   start_date: '1999-09-10'
   end_date: '2000-01-20'
@@ -510,7 +546,7 @@ experience:
   state: Texas
   zip_code: '78238'
   phone: "+1 210-647-0125"
-  url: http://www.askacs.com/
+  url: http://askacs.com/
   supervisor: Jeff Chamberlain
   start_date: '1999-07-06'
   end_date: '1999-08-30'
@@ -537,7 +573,7 @@ experience:
   state: Texas
   zip_code: '76705'
   phone: "+1 800-792-8784"
-  url: http://www.waco.tstc.edu/
+  url: http://tstc.edu/
   supervisor: Susan Meyers
   start_date: '1997'
   end_date: '1998'
@@ -559,7 +595,7 @@ experience:
   state: Texas
   zip_code: '77840'
   phone: "+1 979-764-8602"
-  url: http://www.subway.com/
+  url: http://subway.com/
   supervisor: Belinda
   start_date: '1997-07-15'
   end_date: '1997-10-15'
@@ -580,7 +616,7 @@ experience:
   state: Texas
   zip_code: '76710'
   phone: "+1 254-776-3302"
-  url: http://www.expresspersonnel.com/
+  url: http://expresspersonnel.com/
   supervisor:
   start_date: '1996-11-01'
   end_date: '1996-11-30'
@@ -620,7 +656,7 @@ experience:
   state: Texas
   zip_code: '77802'
   phone: "+1 979-846-4972"
-  url: http://www.subway.com/
+  url: http://subway.com/
   supervisor: Candy
   start_date: '1996-02-15'
   end_date: '1996-08-31'
@@ -638,7 +674,7 @@ experience:
   state: Texas
   zip_code: '77802'
   phone: "+1 979-822-3011"
-  url: http://www.mcdonalds.com/
+  url: http://mcdonalds.com/
   supervisor: Sherry
   start_date: '1994-05-01'
   end_date: '1995-02-28'
@@ -668,7 +704,7 @@ education:
   state: Texas
   zip_code: '76705'
   phone: "+1 800-792-8784"
-  url: http://www.waco.tstc.edu/
+  url: http://tstc.edu/
   degree: Associate of Applied Science
   major: Computer Science Technology
   start_date: '1996-09-05'
@@ -683,7 +719,7 @@ education:
   state: Texas
   zip_code: '77843'
   phone: "+1 979-845-1003"
-  url: http://www.tamu.edu/
+  url: http://tamu.edu/
   degree: Incomplete
   major: Computer Science
   start_date: '1996'
