--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -12,7 +12,7 @@ biography: 'I''m a seasoned DevSecOps engineer with 19 years of experience build
   I enjoy watching questionable memes with my family, sailing, and exploring.'
 experience:
 - tags: current story_time
-  title: Staff Software Development Engineer, Infrastructure
+  title: Staff Infrastructure Engineer
   location: San Diego, CA
   company: Platform Science, Inc.
   address: '9560 Towne Centre Dr #200'
