--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -23,7 +23,7 @@ experience:
   url: https://platformscience.com/
   supervisor: Michael McCann
   start_date: 2023-04-24
-  end_date:
+  end_date: 2024-07-05
   starting_compensation: uDg9+T5Y5l8y0Ou+qdX1lA==
   ending_compensation: SiMywDfVYpayZhpuDUQa5g==
   description:
