--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -15,10 +15,10 @@ experience:
   title: Staff Infrastructure Engineer
   location:
   company: Proof Singularity Technologies Inc. (AKA Nebra)
-  address:
-  city:
-  state:
-  zip_code:
+  address: 26 Broadway
+  city: Brooklyn
+  state: New York
+  zip_code: 11249
   phone:
   url: https://nebra.one/
   supervisor: Duncan Tebbs
